bk_ida/gccida/c2/mergeable_string_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mergeable_string_section/src/varasm.c:1165:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mergeable_string_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mergeable_string_section/src/varasm.c:1168:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mergeable_string_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mergeable_string_section/src/obj/varasm.o] Error 1
